// Copyright 2022 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

syntax = "proto3";

package io.harness.delegate;
option java_multiple_files = true;
option go_package = "920_delegate_service_beans";

message LogConfig {
  // log base key for sending logs
  string log_key = 1;
  // log service token
  string token = 2;
}